# ROS2vision

./: .gitignore  README.md
.github/workflows/: ci.yml  firmware-ci.yml
docs/deployment/: industrial_pc_setup.md
docs/software/: camera.md  recognition.md
firmware/uno_controller/: stepper_device.h  uno_controller.ino
ros2_ws/src/camera_vision_pkg/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/camera_vision_pkg/camera_vision_pkg/: camera_runner.py
ros2_ws/src/camera_vision_pkg/config/: camera_hd.yaml  camera_vga.yaml  camera_wide.yaml
ros2_ws/src/camera_vision_pkg/launch/: camera_source.launch.py
ros2_ws/src/control_pkg/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/control_pkg/config/: control_params.yaml
ros2_ws/src/control_pkg/control_pkg/bridges/: uno_serial_bridge_node.py
ros2_ws/src/control_pkg/control_pkg/controllers/: target_follower_node.py
ros2_ws/src/control_pkg/launch/: control_follow.launch.py
ros2_ws/src/recognition_pkg/: README.md  package.xml  setup.cfg  setup.py
ros2_ws/src/recognition_pkg/config/: recognition_params.color.yaml  recognition_params.face.yaml  target_detector.color.yaml  target_detector.face.yaml  tracking_debug_viewer.yaml
ros2_ws/src/recognition_pkg/launch/: image_preprocessor.launch.py  target_detector.launch.py  tracking_debug_viewer.launch.py
ros2_ws/src/recognition_pkg/recognition_pkg/: __init__.py  image_preprocessor_node.py  target_detector_node.py  tracking_debug_viewer_node.py
ros2_ws/src/recognition_pkg/recognition_pkg/detectors/: base_detector.py  color_detector.py  face_detector.py
ros2_ws/src/recognition_pkg/resource/: recognition_pkg
ros2_ws/src/ros2vision_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/ros2vision_bringup/launch/: full_system.launch.py
ros2_ws/src/ros2vision_bringup/resource/: ros2vision_bringup
ros2_ws/src/ros2vision_interfaces/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/ros2vision_interfaces/msg/: Target.msg
